<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_to_the_game"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/computer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="179dp"
        android:background="@drawable/backgroundmain"
        android:text="@string/computer_mode" />

    <Button
        android:id="@+id/play"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/computer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/backgroundmain"
        android:text="@string/two_players" />

    <Button
        android:id="@+id/advance"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="111dp"
        android:background="@drawable/layershape"
        android:text="Play advanced Board" />
</RelativeLayout>

